--- a/grid 1/index.html
+++ b/grid 1/index.html
@@ -8,12 +8,12 @@
 <link rel="stylesheet" href="style.css">
 <body>
     <div class="container">
-        <div class="item sameside sameside1 "><P>Chutiya </P></div>
-        <div class="item left_side1"><P>banaya</P></div>
-        <div class="item left_side2"><P>tumko</P></div>
-        <div class="item sameside sameside2 "><P>Bade</P></div>
-        <div class="item left_side3"><P>Harami Ho</P></div>
-        <div class="item left_side4"><P>Beta</P></div>
+        <div class="item sameside sameside1 "><P>My  </P></div>
+        <div class="item left_side1"><P>Name </P></div>
+        <div class="item left_side2"><P>Is</P></div>
+        <div class="item sameside sameside2 "><P>Sachin</P></div>
+        <div class="item left_side3"><P>Kumar</P></div>
+        <div class="item left_side4"><P>Sharma</P></div>
     </div>
 </body>
 </html>
